# What-Changed

./: .gitignore  LICENSE  README.md  demo-cards-v2.html  demo-cards.html  demo-reveal.html  gen_icons.py  index.html  package-lock.json  package.json  tailwind.config.js  test_deletion.txt  tsconfig.node.json  vite.config.ts
.playwright-mcp/: page-2026-06-18T19-43-33-388Z.yml  page-2026-06-18T19-44-01-881Z.yml  page-2026-06-18T20-34-01-316Z.yml  page-2026-06-23T14-49-43-035Z.yml  page-2026-06-23T14-49-56-265Z.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  cloud_detect.rs  crypto.rs  database.rs  duplicates.rs  events.rs  export.rs  file_snapshots.rs  lib.rs  main.rs  notifications.rs  recycle_bin.rs  scanner.rs  scheduler.rs  security.rs  storage.rs  tray.rs  webhook.rs
src/components/Changes/: ChangeList.tsx  CommitCard.tsx  FolderCard.tsx
src/components/Common/: AdvancedSearchBar.tsx  ChangelogGenerator.tsx  ErrorBoundary.tsx  FileHistoryTimeline.tsx  Layout.tsx  OnboardingFlow.tsx  ProfileSwitcher.tsx  ScanProgress.tsx  SearchBar.tsx  ShortcutsHelp.tsx  Sidebar.tsx  UpdateBanner.tsx  VirtualList.tsx  WebhookHelpModal.tsx
src/components/Dashboard/: ActivityHeatmap.tsx  ChangeTimeline.tsx  Dashboard.tsx  FileTypeAnalytics.tsx  StatsCards.tsx  StorageChart.tsx
src/components/Duplicates/: DuplicateGroup.tsx  DuplicatesView.tsx
src/components/Recovery/: BlameView.tsx  CloudPanel.tsx  ExportPanel.tsx  FileDiffViewer.tsx  RecoveryCards.tsx  RecoveryView.tsx  RecycleBinPanel.tsx  SnapshotCompare.tsx  SnapshotPanel.tsx
src/components/Settings/: FolderList.tsx  IgnorePatterns.tsx  NotificationProfiles.tsx  Settings.tsx  WebhookSettings.tsx
src/hooks/: useChanges.ts  useDarkMode.ts  useDuplicates.ts  useKeyboardShortcuts.ts  useRecovery.ts  useScanBatches.ts  useSettings.ts
src/lib/: tauri.ts
src/styles/: globals.css
