[package]
name = "what-changed"
version = "0.1.0"
description = "What Changed? - A lightweight file system monitor"
authors = ["What Changed Team"]
edition = "2021"

[lib]
name = "what_changed_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
zstd = "0.13"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
